<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Physics_Demonstrator_2</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message"> Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="start">Start!</string>
    <string name="physics">Physics</string>
    <string name="demonstrator">Demonstrator</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="creators">Created by Julian Fuchs, Kyle Swanson,    Bertrand Stone, and Bryce Hwang.</string>
    <string name="copyrightyear">Copyright © 2015</string>
    <string name="backtomainmenu">Main Menu</string>
    <string name="title_activity_instructions">InstructionsActivity</string>
    <string name="getstarted">Let\'s get started!</string>
    <string name="instructions">Instructions</string>
    <string name="takepicture">1) Take a picture</string>
    <string name="funphysics">2) Have fun with physics!</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finished">Finished</string>
    <string name="title_activity_victory_actiity">VictoryActiity</string>
    <string name="title_activity_victory">VictoryActivity</string>

</resources>
